fix to spacing of chat section under nav

--- a/app/output.css
+++ b/app/output.css
@@ -1163,6 +1163,14 @@ video {
   margin-top: 8rem;
 }
 
+.mt-36 {
+  margin-top: 9rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
